# PicCollage-ML-Intern

./: .gitignore  README.md  pyproject.toml
src/: dataset.py  main.py  model.py  preprocess.py  train.py
